# agentrace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  agentrace_spec.docx  demo.py  eval.yaml  pyproject.toml  verify_langchain.py  verify_langgraph.py  verify_openai.py  verify_phase8_9.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agentrace/: __init__.py  config.py
agentrace/capture/: __init__.py  async_context.py  context_manager.py  decorator.py  span.py
agentrace/classifier/: __init__.py  llm_classifier.py  models.py  rule_based.py
agentrace/dataset/: __init__.py  dataset.py  models.py
agentrace/metrics/: __init__.py  base.py
agentrace/normalizer/: __init__.py  models.py  normalizer.py
agentrace/report/: __init__.py  cli_reporter.py  html_reporter.py  json_reporter.py
agentrace/runner/: __init__.py  checkpoint.py  models.py  runner.py
agentrace/storage/: __init__.py  base.py  postgres_backend.py  serialization.py  sqlite_backend.py
cli/: __init__.py  benchmark.py  diff.py  main.py  run.py
eval_results/: run_20260327_201700.json  run_20260327_201921.json  run_20260327_201932.json
examples/: dataset.json  demo_agent.py  eval.yaml
templates/: report.html.j2
tests/: __init__.py  conftest.py  test_classifier.py  test_deterministic_metrics.py  test_evaluate_smoke.py  test_normalizer.py  test_normalizer_properties.py  test_rule_based_classifier.py  test_runner.py  test_trace_span.py
tests/test_metrics/: test_deterministic.py  test_llm_judge.py
(+32 files in other folders)
